[package]
name = "metalink"
version = "0.1.0"
description = "A Metalink 4.0 parser"
authors = ["OpenByte <development.openbyte@gmail.com>"]
homepage = "https://github.com/OpenByteDev/metalink"
repository = "https://github.com/OpenByteDev/metalink"
license = "MIT"
license-file = "LICENSE"
keywords = ["metalink", "meta4", "parser"]
categories = ["parsing", "filesystem"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] } # TODO: make optional
url = { version = "2.2", features = ["serde"] } # TODO: make optional
