[package]
name = "metalink"
version = "0.1.0"
description = "A Metalink 4.0 parser"
authors = ["OpenByte <development.openbyte@gmail.com>"]
homepage = "https://github.com/OpenByteDev/metalink"
repository = "https://github.com/OpenByteDev/metalink"
license = "MIT"
license-file = "LICENSE"
keywords = ["metalink", "meta4", "parser"]
categories = ["parsing", "filesystem"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4" } 
url = { version = "2.2" }
strong-xml = "0.6.0"

[dev-dependencies]
test-generator = "0.3.0"
